# PettingLLMs

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  fix_sglang.sh  generate_sudoku_environments.py  install_dependencies.py  pyproject.toml  requirements_venv.txt  requirements_venv_cu128.txt  rollout_data.json  setup.bash  setup.py  success_rollout_idx_list_dict.json  success_rollout_idx_list_dict.txt  success_rollout_rate_dict.json  success_rollout_rate_dict.txt  test_async_improvements.py  train.py  training.txt
docs/: index.md
docs/doc/: conf.py  index.rst
pettingllms/: eval.py  eval_api.py
pettingllms/agentgpraphs/design_human_interact/: README_TEST.md  README_test_system.md  agent_collaboration_graph.py  launch_servers_verbose.sh  quick_test.sh  test_multi_agent_graph.sh  websight_env.py
pettingllms/config/: README.md  grpo_trainer.yaml  ppo_trainer.yaml
pettingllms/config/alfworld/: alfworld_agent.yaml
pettingllms/config/autoevol/: math_L1_prompt.yaml
pettingllms/config/autogen_graph/: code_graph_L3_model.yaml
pettingllms/config/code/: code_L0_single_agent.yaml  code_L1_lora.yaml  code_L3_model.yaml  code_eval.yaml  code_eval_single_agent.yaml  code_single_policy.yaml  code_two_policies.yaml
pettingllms/config/math/: math_L0_single_agent.yaml  math_L1_prompt.yaml  math_L1_prompt_train_reasoning.yaml  math_L2_lora.yaml  math_L3_model.yaml
pettingllms/demo/: producer_consumer_example.py  run.py
pettingllms/dyevolve/utils/: prompt.py  (+6 more)
pettingllms/env/: __init__.py  base.py
pettingllms/evaluate/: evaluate.py  vllm_id_token_proxy.py
pettingllms/llm_agent/: agent_proxy.py  ctx_manager.py  es_manager.py  request_buffer.py
pettingllms/llm_serving/: README.md  __init__.py  async_batch_manager.py  example_usage.py  request_generation.py  rollout_consumer.py  rollout_serving.py
pettingllms/router/: router.py
pettingllms/sft_train/: data_collector.py  train.py
pettingllms/trainer/: agent_trainer.py  async_generate.py  math_utils.py  multi_agent_config_utils.py  multi_agents_execution_engine.py  multi_agents_execution_engine_autoevol.py  multi_agents_execution_engine_graph.py  multi_agents_ppo_trainer.py  multiagentssys_register.py  train.py  utils.py
pettingllms/utils/: api_client.py  clean_up.py  openai.py  test_cleanup.py
pettingllms/verl/: ray_trainer.py
pettingllms/workers/: fsdp_workers.py
scripts/: alfworld.sh  code_grpo.sh  code_single_agent_epoch.sh  code_single_agent_resample.sh  code_single_policy.sh  code_single_policy_single_agent.sh  code_two_policy.sh  data_prepare_code_grpo.sh  setup_ragen.sh  sokodu.sh  sokodu_single.sh  sokodu_two_policy.sh  validate_z1.7B.sh
scripts/dataprocess/: load_code.py
scripts/pychecker_script/: pychecker_rl_L2_multi_agent_1.sh
scripts/sft_train/: README.md  code_sft_collect_and_train.sh  code_sft_collect_only.sh  code_sft_quick_test.sh  code_sft_quick_test_using_vllm.sh  code_sft_train_only.sh  math_sft_collect_and_train.sh
scripts/train/: math.sh  plan_path.sh
tests/llm_agent/: test_context_window.py
(+257 files in other folders)
